adding in Reeval PG and RLZero

--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,30 @@
 
   <div class="paper-row">
     <div class="paper-info">
+      <papertitle><b><u>RL Zero: Zero-Shot Language to Behaviors without any Supervision</u></b></papertitle>
+      <br>
+      Harshit Sikchi, Siddhant Agarwal, Pranaya Jajoo, Samyak Parajuli, Caleb Chuck, Max Rudolph, Peter Stone, Amy Zhang, Scott Niekum
+      <br>
+      <a href="https://arxiv.org/abs/2412.05718" target="_blank">arxiv</a> /
+      <a href="https://hari-sikchi.github.io/rlzero/" target="_blank">project page</a>
+    </div>
+    <img src="paper_images/rl_zero.gif" alt="Paper Img" class="paper-logo">
+  </div>
+
+  <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Reevaluating Policy Gradient Methods for Imperfect-Information Games</u></b></papertitle>
+      <br>
+      Max Rudolph, Nathan Lichtle, Sobhan Mohammadpour, Alexndre Bayen, J. Zico Kolter, Amy Zhang, Eugene Vinitsky, Sam Sokota
+      <br>
+      <a href="https://arxiv.org/abs/2502.08938" target="_blank">arxiv</a> /
+      <a href="https://github.com/nathanlct/IIG-RL-Benchmark" target="_blank">project page</a>
+    </div>
+    <img src="paper_images/reeval_pg.png" alt="Paper Img" class="paper-logo">
+  </div>
+
+  <div class="paper-row">
+    <div class="paper-info">
       <papertitle><b><u>Augmented Conditioning Is Enough For Effective Training Image Generation</u></b></papertitle>
       <br>
       Jiahui Chen, Amy Zhang, Adriana Romero-Soriano
