Title and emoji update

--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="homepageimages/midi_icon.jpg" type="image/x-icon">
-  <title>Machine Intelligence through Decision-making and Interaction</title>
+  <title>MIDI Lab: Machine Intelligence through Decision-making and Interaction</title>
   <meta name="author" content="MIDI">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="midistyle.css"/>
@@ -147,14 +147,14 @@
     <a href="http://calcharles.github.io/" class="person-card" target="_blank" rel="noopener">
       <img src="peoplepageimages/caleb.jpg" class="person-img" alt="Caleb Chuck">
       <span class="person-name">Caleb Chuck</span>
-      <span class="person-desc">After Graduation: Synthefy</span>
+      <span class="person-desc">After 🎓: Synthefy</span>
     </a>
 
     <!-- Harshit -->
     <a href="https://hari-sikchi.github.io/" class="person-card" target="_blank" rel="noopener">
       <img src="peoplepageimages/harshit.png" class="person-img" alt="Harshit Sikchi">
       <span class="person-name">Harshit Sikchi</span>
-      <span class="person-desc">After Graduation: TODO</span>
+      <span class="person-desc">After 🎓: OpenAI</span>
     </a>
 
   </div>
