Fixing image typo in DualRL pub

--- a/publications.html
+++ b/publications.html
@@ -112,7 +112,7 @@
       <a href="https://openreview.net/pdf?id=9JtG4nN7ql" target="_blank">arxiv</a> /
 <!--       <a href="https://github.com/nathanlct/IIG-RL-Benchmark" target="_blank">project page</a> -->
     </div>
-    <img src="paper_images/midilogo.png" alt="Paper Img" class="paper-logo">
+    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
   
   <div class="paper-row">
