--- a/people.html
+++ b/people.html
@@ -111,22 +111,17 @@
   </div>
 </div>
 
-<!-- Can Add: Masters Students Section -->
 
-<!-- Masters Students -->
+<!-- Masters & Visitng Students -->
 <div class="people-section">
-  <h2 class="people-title">Masters Students</h2>
+  <h2 class="people-title">Masters & Visiting Students</h2>
   <div class="people-grid">
 
-  </div>
-</div>
-
-<!-- Visitng Students -->
-<div class="people-section">
-  <h2 class="people-title">Visiting Students</h2>
-  <div class="people-grid">
-
-    
+    <!-- Pierriccardo -->
+    <a href="https://pierriccardo.github.io/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/pierriccardo.jpg" class="person-img" alt="Pierriccardo Olivieri">
+      <span class="person-name">Pierriccardo Olivieri</span>
+    </a>
 
   </div>
 </div>
