--- a/publications.html
+++ b/publications.html
@@ -105,14 +105,14 @@
   
   <div class="paper-row">
     <div class="paper-info">
-      <papertitle><b><u>Iterative Dual-RL: An Optimal Discriminator Weighted Imitation Perspective for Reinforcement Learning</u></b></papertitle>
+      <papertitle><b><u>An Optimal Discriminator Weighted Imitation Perspective for Reinforcement Learning</u></b></papertitle>
       <br>
       Haoran Xu, Shuozhe Li, Harshit Sikchi, Scott Niekum, Amy Zhang
       <br>
-      <a href="https://openreview.net/pdf?id=9JtG4nN7ql" target="_blank">arxiv</a> /
-<!--       <a href="https://github.com/nathanlct/IIG-RL-Benchmark" target="_blank">project page</a> -->
+      <a href="https://arxiv.org/abs/2504.13368" target="_blank">ICLR 2025</a> /
+      <a href="https://ryanxhr.github.io/IDRL/" target="_blank">project page</a>
     </div>
-    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
+    <img src="paper_images/iterative_dualrl.png" alt="Paper Img" class="paper-logo">
   </div>
   
   <div class="paper-row">
@@ -141,7 +141,19 @@
 
  <!--2024 publications -->
 <year>2024</year>
-  
+
+    <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Diffusion-DICE: In-Sample Diffusion Guidance for Offline Reinforcement Learning</u></b></papertitle>
+      <br>
+      Liyuan Mao*, Haoran Xu*, Weinan Zhang, Xianyuan Zhan, Amy Zhang
+      <br>
+      <a href="https://arxiv.org/abs/2407.20109" target="_blank">NeurIPS 2024</a> /
+      <a href="https://ryanxhr.github.io/Diffusion-DICE/" target="_blank">project page</a>
+    </div>
+    <img src="paper_images/diffusion_dice.gif" alt="Paper Img" class="paper-logo">
+  </div>
+
   <div class="paper-row">
     <div class="paper-info">
       <papertitle><b><u>A Dual Approach to Imitation Learning from Observations with Offline Datasets</u></b></papertitle>
