--- a/publications.html
+++ b/publications.html
@@ -134,7 +134,7 @@
       Jiahui Chen, Amy Zhang, Adriana Romero-Soriano
       <br>
       <a href="https://arxiv.org/abs/2502.04475" target="_blank">arxiv</a> 
-      <!-- <a href="PROJECT WEBSITE" target="_blank">project page</a> -->
+      <a href="https://openreview.net/forum?id=Gg6j05YsGC" target="_blank">ICLR 2025 SynthData Workshop</a>
     </div>
     <img src="paper_images/aug_cond.jpg" alt="Paper Img" class="paper-logo">
   </div> 
