--- a/people.html
+++ b/people.html
@@ -52,6 +52,13 @@
       <span class="person-desc">Assistant Professor</span>
     </a>
 
+    <!-- Alex -->
+    <a href="https://sites.google.com/utexas.edu/alexander-levine/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/alex_levine.jpg" class="person-img" alt="Alexander Levine">
+      <span class="person-name">Alexander Levine</span>
+      <span class="person-desc">Postdoctoral Fellow</span>
+    </a>
+
   </div>
 </div>
 
