--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,17 @@
 
 <year>2025</year>
 
+    <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Offline Action-Free Learning of Ex-BMDPs by Comparing Diverse Datasets</u></b></papertitle>
+      <br>
+      Alexander Levine, Peter Stone, Amy Zhang
+      <br>
+      <a href="https://openreview.net/forum?id=lbHnAyB4kf" target="_blank">RLC 2025</a>
+    </div>
+    <img src="paper_images/CRAFT_thumbnail.png" alt="Paper Img" class="paper-logo">
+  </div>
+
   <div class="paper-row">
     <div class="paper-info">
       <papertitle><b><u>Fast Adaptation with Behavioral Foundation Models</u></b></papertitle>
@@ -114,6 +125,18 @@
     </div>
     <img src="paper_images/iterative_dualrl.png" alt="Paper Img" class="paper-logo">
   </div>
+
+    <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Learning a Fast Mixing Exogenous Block MDP using a Single Trajectory</u></b></papertitle>
+      <br>
+      Alexander Levine, Peter Stone, Amy Zhang
+      <br>
+      <a href="https://openreview.net/forum?id=41WIgfdd5o" target="_blank">ICLR 2025</a> /
+      <a href="https://github.com/midi-lab/steel/" target="_blank">code</a>
+    </div>
+    <img src="paper_images/Steel_for_midi.png" alt="Paper Img" class="paper-logo">
+  </div>
   
   <div class="paper-row">
     <div class="paper-info">
@@ -142,6 +165,18 @@
  <!--2024 publications -->
 <year>2024</year>
 
+    <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Multistep Inverse Is Not All You Need</u></b></papertitle>
+      <br>
+      Alexander Levine, Peter Stone, Amy Zhang
+      <br>
+      <a href="https://rlj.cs.umass.edu/2024/papers/Paper117.html" target="_blank">RLC 2024</a> /
+      <a href="https://github.com/midi-lab/acdf/" target="_blank">code</a>
+    </div>
+    <img src="paper_images/acdf_for_midi.png" alt="Paper Img" class="paper-logo">
+  </div>
+  
     <div class="paper-row">
     <div class="paper-info">
       <papertitle><b><u>Diffusion-DICE: In-Sample Diffusion Guidance for Offline Reinforcement Learning</u></b></papertitle>
