Update publications.html to reflect publication of arXiv papers

--- a/publications.html
+++ b/publications.html
@@ -72,8 +72,8 @@
       <br>
       Harshit Sikchi, Andrea Tirinzoni, Ahmed Touati, Yingchen Xu, Anssi Kanervisto, Scott Niekum, Amy Zhang, Alessandro Lazaric, Matteo Pirotta
       <br>
-      <a href="https://arxiv.org/pdf/2504.07896" target="_blank">arxiv</a> /
-<!--       <a href="https://hari-sikchi.github.io/rlzero/" target="_blank">project page</a> -->
+      <a href="https://openreview.net/forum?id=soeW8RGo1N" target="_blank">RLC 2025</a>
+   <!--   <a href="https://arxiv.org/pdf/2504.07896" target="_blank">arxiv</a> /   -->
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
@@ -85,6 +85,7 @@
       Harshit Sikchi, Siddhant Agarwal, Pranaya Jajoo, Samyak Parajuli, Caleb Chuck, Max Rudolph, Peter Stone, Amy Zhang, Scott Niekum
       <br>
       <a href="https://arxiv.org/abs/2412.05718" target="_blank">arxiv</a> /
+      <a href="https://openreview.net/forum?id=wNvuk13MnP" target="_blank">ICLR 2025 Robot Learning Workshop</a> /
       <a href="https://hari-sikchi.github.io/rlzero/" target="_blank">project page</a>
     </div>
     <img src="paper_images/rl_zero.gif" alt="Paper Img" class="paper-logo">
@@ -96,8 +97,8 @@
       <br>
       Siddhant Agarwal, Harshit Sikchi, Peter Stone, Amy Zhang 
       <br>
-      <a href="https://arxiv.org/pdf/2411.19418" target="_blank">arxiv</a> /
-<!--       <a href="https://hari-sikchi.github.io/rlzero/" target="_blank">project page</a> -->
+      ICML 2025 (to appear) /
+      <a href="https://arxiv.org/pdf/2411.19418" target="_blank">arxiv</a> 
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
@@ -140,16 +141,17 @@
   
   <div class="paper-row">
     <div class="paper-info">
-      <papertitle><b><u>Reevaluating Policy Gradient Methods for Imperfect-Information Games</u></b></papertitle>
+      <papertitle><b><u>EC-Diffuser: Multi-Object Manipulation via Entity-Centric Behavior Generation</u></b></papertitle>
       <br>
-      Max Rudolph, Nathan Lichtle, Sobhan Mohammadpour, Alexndre Bayen, J. Zico Kolter, Amy Zhang, Eugene Vinitsky, Sam Sokota
+      Carl Qi, Dan Haramati, Tal Daniel, Aviv Tamar, Amy Zhang
       <br>
-      <a href="https://arxiv.org/abs/2502.08938" target="_blank">arxiv</a> /
-      <a href="https://github.com/nathanlct/IIG-RL-Benchmark" target="_blank">project page</a>
+      <a href="https://openreview.net/forum?id=o3pJU5QCtv" target="_blank">ICLR 2025</a> /
+      <!--  <a href="https://openreview.net/pdf/d5d60ed6df9d759f4fe365d67ea8b6dd2eeebdfc.pdf" target="_blank">arxiv</a> / -->
+      <a href="https://sites.google.com/view/ec-diffuser" target="_blank">project page</a>
     </div>
-    <img src="paper_images/reeval_pg.png" alt="Paper Img" class="paper-logo">
+    <img src="paper_images/ec_diffuser.gif" alt="Paper Img" class="paper-logo">
   </div>
-
+  
   <div class="paper-row">
     <div class="paper-info">
       <papertitle><b><u>Augmented Conditioning Is Enough For Effective Training Image Generation</u></b></papertitle>
@@ -161,6 +163,19 @@
     </div>
     <img src="paper_images/aug_cond.jpg" alt="Paper Img" class="paper-logo">
   </div> 
+  
+  <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Reevaluating Policy Gradient Methods for Imperfect-Information Games</u></b></papertitle>
+      <br>
+      Max Rudolph, Nathan Lichtle, Sobhan Mohammadpour, Alexndre Bayen, J. Zico Kolter, Amy Zhang, Eugene Vinitsky, Sam Sokota
+      <br>
+      <a href="https://arxiv.org/abs/2502.08938" target="_blank">arxiv</a> /
+      <a href="https://github.com/nathanlct/IIG-RL-Benchmark" target="_blank">project page</a>
+    </div>
+    <img src="paper_images/reeval_pg.png" alt="Paper Img" class="paper-logo">
+  </div>
+
 
  <!--2024 publications -->
 <year>2024</year>
@@ -177,16 +192,17 @@
     <img src="paper_images/acdf_for_midi.png" alt="Paper Img" class="paper-logo">
   </div>
   
-    <div class="paper-row">
+  <div class="paper-row">
     <div class="paper-info">
-      <papertitle><b><u>Diffusion-DICE: In-Sample Diffusion Guidance for Offline Reinforcement Learning</u></b></papertitle>
+      <papertitle><b><u>Learning Action-based Representations Using Invariance</u></b></papertitle>
       <br>
-      Liyuan Mao*, Haoran Xu*, Weinan Zhang, Xianyuan Zhan, Amy Zhang
+      Max Rudolph, Caleb Chuck, Kevin Black, Misha Lvovsky, Scott Niekum, Amy Zhang
       <br>
-      <a href="https://arxiv.org/abs/2407.20109" target="_blank">NeurIPS 2024</a> /
-      <a href="https://ryanxhr.github.io/Diffusion-DICE/" target="_blank">project page</a>
+      <a href="https://rlj.cs.umass.edu/2024/papers/Paper39.html"  target="_blank">RLC 2024</a> /
+      <!--  <a href="https://arxiv.org/pdf/2403.16369" target="_blank">arxiv</a> /  -->
+      <a href="https://maxrudolph1.github.io/action-bisimulation-site/" target="_blank">project page</a>
     </div>
-    <img src="paper_images/diffusion_dice.gif" alt="Paper Img" class="paper-logo">
+    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
 
   <div class="paper-row">
@@ -195,10 +211,24 @@
       <br>
       Harshit Sikchi, Caleb Chuck, Amy Zhang, Scott Niekum
       <br>
-      <a href="https://arxiv.org/pdf/2406.08805" target="_blank">arxiv</a> /
+      <a href="https://openreview.net/forum?id=uHdVI3QMr6" target="_blank">CoRL 2024</a> /
+     <!--    <a href="https://arxiv.org/pdf/2406.08805" target="_blank">arxiv</a> / -->
       <a href="https://hari-sikchi.github.io/dilo/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
+  </div>
+  
+  <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Diffusion-DICE: In-Sample Diffusion Guidance for Offline Reinforcement Learning</u></b></papertitle>
+      <br>
+      Liyuan Mao*, Haoran Xu*, Weinan Zhang, Xianyuan Zhan, Amy Zhang
+      <br>
+      <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/b2fea79b1137d917e8b7cce9434ab5fa-Abstract-Conference.html" target="_blank">NeurIPS 2024</a> /
+     <!--    <a href="https://arxiv.org/abs/2407.20109" target="_blank">NeurIPS 2024</a> /  -->
+      <a href="https://ryanxhr.github.io/Diffusion-DICE/" target="_blank">project page</a>
+    </div>
+    <img src="paper_images/diffusion_dice.gif" alt="Paper Img" class="paper-logo">
   </div>
   
   <div class="paper-row">
@@ -207,23 +237,13 @@
       <br>
       Jake Grigsby, Justin Sasek, Samyak Parajuli, Daniel Adebi, Amy Zhang, Yuke Zhu
       <br>
-      <a href="https://arxiv.org/abs/2411.11188" target="_blank">arxiv</a> /
+       <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/9f40d2612d0b3b6f6c2a77da21b1067f-Abstract-Conference.html" target="_blank">NeurIPS 2024</a> /
+     <!--    <a href="https://arxiv.org/abs/2411.11188" target="_blank">arxiv</a> /  -->
       <a href="https://github.com/UT-Austin-RPL/amago" target="_blank">project page</a>
     </div>
     <img src="paper_images/amago2.png" alt="Paper Img" class="paper-logo">
   </div>
   
-  <div class="paper-row">
-    <div class="paper-info">
-      <papertitle><b><u>EC-Diffuser: Multi-Object Manipulation via Entity-Centric Behavior Generation</u></b></papertitle>
-      <br>
-      Carl Qi, Dan Haramati, Tal Daniel, Aviv Tamar, Amy Zhang
-      <br>
-      <a href="https://openreview.net/pdf/d5d60ed6df9d759f4fe365d67ea8b6dd2eeebdfc.pdf" target="_blank">arxiv</a> /
-      <a href="https://sites.google.com/view/ec-diffuser" target="_blank">project page</a>
-    </div>
-    <img src="paper_images/ec_diffuser.gif" alt="Paper Img" class="paper-logo">
-  </div>
   
   <div class="paper-row">
     <div class="paper-info">
@@ -231,7 +251,8 @@
       <br>
       Zizhao Wang, Jiaheng Hu, Caleb Chuck, Stephen Chen, Roberto Martín-Martín, Amy Zhang, Scott Niekum, Peter Stone
       <br>
-      <a href="https://arxiv.org/pdf/2410.18416" target="_blank">arxiv</a> /
+      <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8e3b2fb66db1930ae7fcee712770e48a-Abstract-Conference.html  target="_blank"">NeurIPS 2024</a> /
+      <!--   <a href="https://arxiv.org/pdf/2410.18416" target="_blank">arxiv</a> / -->
       <a href="https://wangzizhao.github.io/SkiLD/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
@@ -239,54 +260,29 @@
   
   <div class="paper-row">
     <div class="paper-info">
-      <papertitle><b><u>Automated Discovery of Functional Actual Causes in Complex Environments</u></b></papertitle>
+      <papertitle><b><u>Score Models for Offline Goal-Conditioned Reinforcement Learning</u></b></papertitle>
       <br>
-      Caleb Chuck, Sankaran Vaidyanathan, Stephen Giguere, Amy Zhang, David Jensen, Scott Niekum
+      Harshit Sikchi, Rohan Chitnis, Ahmed Touati, Alborz Geramifard, Amy Zhang, Scott Niekum
       <br>
-      <a href="https://arxiv.org/pdf/2404.10883" target="_blank">arxiv</a> /
-      <a href="https://calcharles.github.io/" target="_blank">project page</a>
-    </div>
-    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
-  </div>
-  
-  <div class="paper-row">
-    <div class="paper-info">
-      <papertitle><b><u>Automated Discovery of Functional Actual Causes in Complex Environments</u></b></papertitle>
-      <br>
-      Caleb Chuck, Sankaran Vaidyanathan, Stephen Giguere, Amy Zhang, David Jensen, Scott Niekum
-      <br>
-      <a href="https://arxiv.org/pdf/2404.10883" target="_blank">arxiv</a> /
-      <a href="https://calcharles.github.io/" target="_blank">project page</a>
-    </div>
-    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
-  </div>
-  
-  <div class="paper-row">
-    <div class="paper-info">
-      <papertitle><b><u>Learning Action-based Representations Using Invariance</u></b></papertitle>
-      <br>
-      Max Rudolph, Caleb Chuck, Kevin Black, Misha Lvovsky, Scott Niekum, Amy Zhang
-      <br>
-      <a href="https://arxiv.org/pdf/2403.16369" target="_blank">arxiv</a> /
-      <a href="https://maxrudolph1.github.io/action-bisimulation-site/" target="_blank">project page</a>
+      <a href="https://openreview.net/forum?id=oXjnwQLcTA" target="_blank">ICLR 2024</a> /
+     <!--  <a href="https://arxiv.org/pdf/2311.02013" target="_blank">arxiv</a> / -->
+      <a href="https://hari-sikchi.github.io/smore/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
 
   <div class="paper-row">
     <div class="paper-info">
-      <papertitle><b><u>Score Models for Offline Goal-Conditioned Reinforcement Learning</u></b></papertitle>
+      <papertitle><b><u>Dual RL: Unification and new methods for reinforcement and imitation learning</u></b></papertitle>
       <br>
-      Harshit Sikchi, Rohan Chitnis, Ahmed Touati, Alborz Geramifard, Amy Zhang, Scott Niekum
+      Harshit Sikchi, Qinqing Zheng, Amy Zhang, Scott Niekum
       <br>
-      <a href="https://arxiv.org/pdf/2311.02013" target="_blank">arxiv</a> /
-      <a href="https://hari-sikchi.github.io/smore/" target="_blank">project page</a>
+      <a href="https://openreview.net/forum?id=xt9Bu66rqv" target="_blank">ICLR 2024</a> /
+      <!--   <a href="https://arxiv.org/pdf/2302.08560" target="_blank">arxiv</a> /  -->
+      <a href="https://hari-sikchi.github.io/dual-rl/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
-  
-  
-<year>2023</year>
 
   <div class="paper-row">
     <div class="paper-info">
@@ -295,13 +291,25 @@
       Caleb Chuck, Carl Qi, Michael J Munje, Shuozhe Li, Max Rudolph, Chang Shi, Siddhant Agarwal, Harshit Sikchi, Abhinav Peri, Sarthak Dayal, Evan Kuo, Kavan Mehta, Anthony Wang, Peter Stone, Amy Zhang, Scott Niekum
       <br>
       <a href="https://arxiv.org/pdf/2405.03113" target="_blank">arxiv</a> /
+      <a href="https://icra-manipulation-skill.github.io/contributions/" target="_blank"> ICRA 2024 Workshop on Manipulation Skills</a> /
       <a href="https://rlairhockey.github.io/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
+
+  <div class="paper-row">
+    <div class="paper-info">
+      <papertitle><b><u>Automated Discovery of Functional Actual Causes in Complex Environments</u></b></papertitle>
+      <br>
+      Caleb Chuck, Sankaran Vaidyanathan, Stephen Giguere, Amy Zhang, David Jensen, Scott Niekum
+      <br>
+      <a href="https://arxiv.org/pdf/2404.10883" target="_blank">arxiv</a> /
+      <a href="https://calcharles.github.io/" target="_blank">project page</a>
+    </div>
+    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
+  </div>
   
-
-
+<year>2023</year>
   
   <div class="paper-row">
     <div class="paper-info">
@@ -309,20 +317,9 @@
       <br>
       Siddhant Agarwal, Ishan Durugkar, Peter Stone, Amy Zhang
       <br>
-      <a href="https://arxiv.org/abs/2310.06794v1" target="_blank">arxiv</a> /
+      <!--   <a href="https://arxiv.org/abs/2310.06794v1" target="_blank">arxiv</a> / -->
+      <a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/27f4d95417bb722201597bf4d67cbacc-Abstract-Conference.html" target="_blank">NeurIPS 2023</a> /
       <a href="https://agarwalsiddhant10.github.io/projects/fpg.html" target="_blank">project page</a>
-    </div>
-    <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
-  </div>
-  
-  <div class="paper-row">
-    <div class="paper-info">
-      <papertitle><b><u>Dual RL: Unification and new methods for reinforcement and imitation learning</u></b></papertitle>
-      <br>
-      Harshit Sikchi, Qinqing Zheng, Amy Zhang, Scott Niekum
-      <br>
-      <a href="https://arxiv.org/pdf/2302.08560" target="_blank">arxiv</a> /
-      <a href="https://hari-sikchi.github.io/dual-rl/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
   </div>
