Fix broken link

--- a/publications.html
+++ b/publications.html
@@ -251,7 +251,7 @@
       <br>
       Zizhao Wang, Jiaheng Hu, Caleb Chuck, Stephen Chen, Roberto Martín-Martín, Amy Zhang, Scott Niekum, Peter Stone
       <br>
-      <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8e3b2fb66db1930ae7fcee712770e48a-Abstract-Conference.html  target="_blank"">NeurIPS 2024</a> /
+      <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8e3b2fb66db1930ae7fcee712770e48a-Abstract-Conference.html"  target="_blank"">NeurIPS 2024</a> /
       <!--   <a href="https://arxiv.org/pdf/2410.18416" target="_blank">arxiv</a> / -->
       <a href="https://wangzizhao.github.io/SkiLD/" target="_blank">project page</a>
     </div>
