Update a few links on publications.html

--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,8 @@
       <br>
       Arthur Zhang, Harshit Sikchi, Amy Zhang, Joydeep Biswas
       <br>
-      <a href="https://arxiv.org/pdf/2503.03921?" target="_blank">RSS 2025</a> /
+      <!--  <a href="https://arxiv.org/pdf/2503.03921?" target="_blank">RSS 2025</a> / -->
+       <a href="https://www.roboticsproceedings.org/rss21/p136.pdf" target="_blank">RSS 2025</a> /
       <a href="https://amrl.cs.utexas.edu/creste/" target="_blank">project page</a>
     </div>
     <img src="homepageimages/midilogo.png" alt="Paper Img" class="paper-logo">
@@ -108,7 +109,8 @@
       <br>
       Haoran Xu, Shuozhe Li, Harshit Sikchi, Scott Niekum, Amy Zhang
       <br>
-      <a href="https://arxiv.org/abs/2504.13368" target="_blank">ICLR 2025</a> /
+      <!--  <a href="https://arxiv.org/abs/2504.13368" target="_blank">ICLR 2025</a> /  -->
+      <a href="https://openreview.net/forum?id=9JtG4nN7ql" target="_blank">ICLR 2025</a> /
       <a href="https://ryanxhr.github.io/IDRL/" target="_blank">project page</a>
     </div>
     <img src="paper_images/iterative_dualrl.png" alt="Paper Img" class="paper-logo">
