--- a/people.html
+++ b/people.html
@@ -52,13 +52,6 @@
       <span class="person-desc">Assistant Professor</span>
     </a>
 
-    <!-- Alex -->
-    <a href="https://sites.google.com/view/alexander-levine/" class="person-card" target="_blank" rel="noopener">
-      <img src="peoplepageimages/alex_levine.jpg" class="person-img" alt="Alexander Levine">
-      <span class="person-name">Alexander Levine</span>
-      <span class="person-desc">Postdoctoral Fellow</span>
-    </a>
-
   </div>
 </div>
 
@@ -168,14 +161,21 @@
     <a href="http://calcharles.github.io/" class="person-card" target="_blank" rel="noopener">
       <img src="peoplepageimages/caleb.jpg" class="person-img" alt="Caleb Chuck">
       <span class="person-name">Caleb Chuck</span>
-      <span class="person-desc">After 🎓: Synthefy</span>
+      <span class="person-desc">Next Position: Synthefy</span>
     </a>
 
     <!-- Harshit -->
     <a href="https://hari-sikchi.github.io/" class="person-card" target="_blank" rel="noopener">
       <img src="peoplepageimages/harshit.jpg" class="person-img" alt="Harshit Sikchi">
       <span class="person-name">Harshit Sikchi</span>
-      <span class="person-desc">After 🎓: OpenAI</span>
+      <span class="person-desc">Next Position: OpenAI</span>
+    </a>
+
+    <!-- Alex -->
+    <a href="https://sites.google.com/view/alexander-levine/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/alex_levine.jpg" class="person-img" alt="Alexander Levine">
+      <span class="person-name">Alexander Levine</span>
+      <span class="person-desc">Next Position: OpenAI</span>
     </a>
 
   </div>
