--- a/people.html
+++ b/people.html
@@ -123,6 +123,12 @@
       <span class="person-name">Pierriccardo Olivieri</span>
     </a>
 
+    <!-- Prathyusha -->
+    <a href="https://www.linkedin.com/in/prathyusha-guduru-a48a711a4/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/prathyusha.png" class="person-img" alt="Prathyusha Guduru">
+      <span class="person-name">Prathyusha Guduru</span>
+    </a>
+
   </div>
 </div>
 
