--- a/people.html
+++ b/people.html
@@ -51,6 +51,12 @@
       <span class="person-name">Amy Zhang</span>
       <span class="person-desc">Assistant Professor</span>
     </a>
+    
+    <!-- Claas -->
+    <a href="https://cvoelcker.de/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/claas.jpg" class="person-img" alt="Claas Voelcker">
+      <span class="person-name">Claas Voelcker</span>
+    </a>
 
   </div>
 </div>
