--- a/people.html
+++ b/people.html
@@ -135,6 +135,12 @@
       <span class="person-name">Prathyusha Guduru</span>
     </a>
 
+    <!-- Viraj -->
+    <a href="https://viraj-joshi.github.io/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/viraj.png" class="person-img" alt="Viraj Joshi">
+      <span class="person-name">Viraj Joshi</span>
+    </a>
+
   </div>
 </div>
 
