--- a/people.html
+++ b/people.html
@@ -113,6 +113,12 @@
       <img src="peoplepageimages/shouzhe.jpg" class="person-img" alt="Shouzhe Li">
       <span class="person-name">Shouzhe Li</span>
     </a>
+
+    <!-- Dongsu -->
+    <a href="https://dongsuleetech.github.io/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/dongsul.JPG" class="person-img" alt="Dongsu Lee">
+      <span class="person-name">Dongsu Lee</span>
+    </a>
             
   </div>
 </div>
